# edp2

./: .gitignore  .gitingore  CMakeLists.txt  README.md  use_me.bash
.devcontainer/: Dockerfile
Latex/: report.tex
Latex/figure/: figure1.tex  figure2.tex  figure3.tex  figure4.tex  figure5.tex  figure6.tex  figure7.tex  figure8.tex
input/: benchmarks1  benchmarks2  error1  error2  error_test  solve_test
input/error/: test
input/error_burgers_1d/: error_burgers_1d_1  error_burgers_1d_2  error_burgers_1d_3
input/error_transport_1d/: error_transport_1d_1  error_transport_1d_2  error_transport_1d_3  error_transport_1d_unstable
input/solve/: bassin  solve_sv_1  test
input/solve/burgers/: burgers_2  burgers_3
input/solve/transport/: transport_2  transport_unstable
input/solve_burgers_1d/: solve_burgers_1d_1  solve_burgers_1d_2  solve_burgers_1d_3
input/solve_transport_1d/: solve_transport_1d_1  solve_transport_1d_2  solve_transport_1d_3
output/benchmarks1/: parameters  plotcom.gnu
output/benchmarks2/: parameters  plotcom.gnu
output/error1/: parameters  plotcom.gnu
output/error2/: parameters  plotcom.gnu
output/error_burgers_1d/error_burgers_1d_1/: parameters  plotcom.gnu
output/error_test/: parameters  plotcom.gnu
output/solve_test/: parameters  plotcom.gnu
src/: compute_error.c  function.c  function_annex.c  function_plot.c  godunov.c  godunov.h  godunov_error.c  parameters.c  parameters.h  parameters_equation.c  raler.c  riemann.c  riemann.h  solve.c
src/code_c/: godunov_error.c
src/code_py&c/: godunov.c  godunov.h  setup.py
src/riemann/: riemann  riemann.c  riemcom.gnu
src/solve/: function.c  function_annex.c  parameters.h  parameters_equation.c  raler.c  solve.c
(+27 files in other folders)
